fix: add text-overflow ellipsis in navbar

--- a/frontend/src/components/UI/Navbar/Navbar.module.css
+++ b/frontend/src/components/UI/Navbar/Navbar.module.css
@@ -29,26 +29,39 @@
 
 .profileInfoContainer {
     display: inline-grid;
-    grid-template-columns: 40px auto;
+    grid-template-columns: 40px 200px;
     column-gap: 5px;
     z-index: 5;
 }
 
+@media (min-width: 375px) {
+    .profileInfoContainer {
+        grid-template-columns: 40px 250px;
+    }
+}
+
+@media (min-width: 425px) {
+    .profileInfoContainer {
+        grid-template-columns: 40px 250px;
+    }
+}
+
 @media (min-width: 768px) {
     .profileInfoContainer {
-        grid-template-columns: 50px auto;
+        grid-template-columns: 50px 240px;
     }
 }
 
 @media (min-width: 1024px) {
     .profileInfoContainer {
-        grid-template-columns: 60px auto;
+        grid-template-columns: 60px 400px;
         column-gap: 10px;
     }
 }
 
 @media (min-width: 1440px) {
     .profileInfoContainer {
+        grid-template-columns: 60px 650px;
         column-gap: 15px;
     }
 }
@@ -91,6 +104,8 @@
     font-size: 12px;
     color: white;
     text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 @media (min-width: 1024px) {
@@ -110,6 +125,9 @@
 .employeesPosition {
     font-size: 12px;
     color: #99A7EB;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 @media (min-width: 1024px) {
