--- a/frontend/src/style/Login.module.css
+++ b/frontend/src/style/Login.module.css
@@ -48,17 +48,26 @@
 
 .backgroundContentWrapper {
     display: grid;
-    grid-template-rows: 3fr 1fr;
+    grid-template-rows: 1.3fr 1fr;
+    row-gap: 45px;
     height: 100%;
     align-items: center;
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
     .backgroundContentWrapper {
         grid-template-rows: none;
-        grid-template-columns: 1fr 1.6fr;
+        row-gap: unset;
+        grid-template-columns: 1fr 1fr;
         margin: 0 auto;
-        max-width: 1024px;
+        max-width: 1200px;
+    }
+}
+
+@media (min-width: 1440px) {
+    .backgroundContentWrapper {
+        grid-template-columns: 1fr 1.3fr;
+        max-width: 1300px;
     }
 }
 
@@ -73,12 +82,12 @@
 
 
 .backgroundImgText {
-    font-size: 16px;
+    font-size: 18px;
     font-style: normal;
     color: white;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 425px) {
     .backgroundImgText {
         font-size: 22px;
     }
@@ -87,10 +96,10 @@
 
 
 .backgroundLogo {
-    max-width: 42px;
+    max-width: 46px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 425px) {
     .backgroundLogo {
         max-width: 58px;
     }
@@ -99,11 +108,11 @@
 
 
 .backgroundIcon {
-    max-width: 35px;
-    margin-left: 10%;
+    max-width: 40px;
+    margin-left: 14%;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 425px) {
     .backgroundIcon {
         max-width: 55px;
         margin-left: 15%;
@@ -116,18 +125,33 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    height: 100%;
     align-items: center;
+    justify-content: end;
+}
+
+@media (min-width: 768px) {
+    .inputAndButtonWrapper {
+        justify-content: center;
+    }
 }
 
 @media (min-width: 1024px) {
     .inputAndButtonWrapper {
-        max-width: 500px;
+        max-width: 450px;
     }
 }
 
+@media (min-width: 1440px) {
+    .inputAndButtonWrapper {
+        max-width: unset;
+    }
+}
+
+
+
 .inputAndButtonContainer {
-    width: 70%;
-    margin-bottom: 10%;
+    width: 80%;
     max-width: 300px;
 }
 
@@ -137,13 +161,14 @@
     display: flex;
     height: 100%;
     position: relative;
+    align-items: start;
     justify-content: center;
-    margin: 0 5px;
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
     .greetingTextContainer {
         align-items: center;
+        justify-content: start;
     }
 }
 
@@ -153,27 +178,54 @@
     position: absolute;
     font-size: 14px;
     color: white;
-    bottom: 0;
-    line-height: 2;
+    line-height: 1.5;
+    width: 80%;
+    max-width: 370px;
 }
 
 @media (min-width: 768px) {
     .greetingText {
         font-size: 16px;
-        margin-right: 30px;
+        margin-left: 0px;
+        bottom: unset;
+        max-width: unset;
+        width: 90%;
     }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1440px) {
     .greetingText {
-        margin-right: 0;
+        width: 100%;
+    }
+}
+
+
+
+.greetingText > b {
+    font-size: 20px;
+}
+
+@media (min-width: 634px) {
+    .greetingText > b {
+        font-size: 22px;
+    }
+}
+
+@media (min-width: 768px) {
+    .greetingText > b {
+        font-size: 24px;
     }
 }
 
 @media (min-width: 1024px) {
-    .greetingText {
-        bottom: unset;
-        margin-left: 0;
+    .greetingText > b {
+        font-size: 26px;
+    }
+}
+
+@media (min-width: 1440px) {
+    .greetingText > b {
+        font-size: 28px;
     }
 }
 
